--- a/project/index.html
+++ b/project/index.html
@@ -56,6 +56,7 @@
 			</li>
 			<li class="sub-menu-history" id="history-expanded">
 				<!-- Add History Submenu Content Here -->
+				<div id="history-records"></div>
 			</li>
 			<li class="menu-item" onclick="toggleOptionLocation()">
 				<i class="ri-user-location-line"></i>
@@ -108,7 +109,8 @@
 		let isTrafficExpanded = false;
 		let isHistoryExpanded = false;
 		let isLocationExpanded = false;
-		//let ismapExpanded = true;
+		let numOptions = 0;
+
 		let pointArray = [];
 		function toggleSwitch() {
 			const switchContainer = document.getElementById('switch-inner');
@@ -180,10 +182,24 @@
 		function toggleOptionHistory() {
 			if (isExpanded) {
 				const historyExpanded = document.getElementById('history-expanded');
+				const historyContainer = document.getElementById('history-records');
+
+				const button = historyContainer.getElementsByClassName('records-option');
+				if (isHistoryExpanded) {
+					historyExpanded.style.height = 0;
+					historyContainer.style.display = 'none';
+				} else {
+					historyExpanded.style.height = `${50 * numOptions}px`;
+					historyContainer.style.display = 'list-item';
+					for (let i = 0; i < button.length; i++)
+						button[i].style.display = 'list-item';
+				}
+
 				historyExpanded.classList.toggle('expanded');
 
 				const historyArrow = document.getElementById('history-arrow');
 				historyArrow.classList.toggle('inline-arrow-rotate');
+
 
 				isHistoryExpanded = !isHistoryExpanded;
 			}
@@ -196,7 +212,7 @@
 
 				const locationArrow = document.getElementById('location-arrow');
 				locationArrow.classList.toggle('inline-arrow-rotate');
-				
+
 				const constElements = locationExpanded.querySelectorAll('p');
 				for (const element of constElements) {
 					element.classList.toggle('hidden');
@@ -216,7 +232,7 @@
 					locationInfo.innerHTML = '';
 					clearCurrentLocation_map();
 				}
-				
+
 				isLocationExpanded = !isLocationExpanded;
 			}
 		}
@@ -414,76 +430,177 @@
 
 		let maxarea = 0.000065;
 
+		const MAX_USER = 5;
+		let RouteType = 'drive';
+
 		function submit() {
 			const startingPoint = startPoint.value;
 			const destination = endPoint.value;
 			console.log(startingPoint);
 			console.log(destination);
+			// window.startingPointLatitude = null;
+			// window.startingPointLongitude = null;
+			// window.destinationLatitude = null;
+			// window.destinationLongitude = null;
+			let start_userArray_lat = JSON.parse(localStorage.getItem('start_users_lat')) || [];
+			let start_userArray_log = JSON.parse(localStorage.getItem('start_users_log')) || [];
+			let end_userArray_lat = JSON.parse(localStorage.getItem('end_users_lat')) || [];
+			let end_userArray_log = JSON.parse(localStorage.getItem('end_users_log')) || [];
+			let RouteType_userArray = JSON.parse(localStorage.getItem('RouteType_users')) || [];
+			let accessTimes_userArray = JSON.parse(localStorage.getItem('accessTimes_users')) || [];
 
 			var location_1 = startingPoint;
 			var location_2 = destination;
+
 			// const startingPointCoords = startingPoint.split(',');
 			// const destinationCoords = destination.split(',');
 			// var location = "Singapore";
 
 			// 调用API的端点URL
-			var apiUrl = "https://developers.onemap.sg/";
+			// var apiUrl = "https://developers.onemap.sg/";
 
-			// 构建API请求URL
-			var requestUrl_1 = apiUrl + "commonapi/search?searchVal=" + location_1 + "&returnGeom=Y&getAddrDetails=Y&pageNum=1";
+			// // 构建API请求URL
+			// var requestUrl_1 = apiUrl + "commonapi/search?searchVal=" + location_1 + "&returnGeom=Y&getAddrDetails=Y&pageNum=1";
 
-			// 发送GET请求
-			$.get(requestUrl_1, function (data) {
-				console.log(data);
-				// 储存LATITUDE信息到数组
-				for (var i = 0; i < data.results.length; i++) {
-					start_latitudeArray.push(data.results[i].LATITUDE);
+			// // 发送GET请求
+			// $.get(requestUrl_1, function (data) {
+			// 	console.log(data);
+			// 	// 储存LATITUDE信息到数组
+			// 	for (var i = 0; i < data.results.length; i++) {
+			// 		start_latitudeArray.push(data.results[i].LATITUDE);
+			// 	}
+			// 	// 储存LONGITUDE信息到数组
+			// 	for (var i = 0; i < data.results.length; i++) {
+			// 		start_longitudeArray.push(data.results[i].LONGITUDE);
+			// 	}
+
+			// 	// 提取LATITUDE和LONGITUDE信息
+			// 	window.startingPointLatitude = data.results[0].LATITUDE;
+			// 	window.startingPointLongitude = data.results[0].LONGITUDE;
+
+			// 	// var resultText = "Latitude: " + latitude + "<br>Longitude: " + longitude;
+			// 	// $("#result").html(resultText);
+
+			// 	// 用webstore储存
+
+			// 	// if (start_userArray_lat.length >= MAX_USER) {
+			// 	// 	start_userArray_lat.shift();
+			// 	// }
+			// 	// if (start_userArray_log.length >= MAX_USER) {
+			// 	// 	start_userArray_log.shift();
+			// 	// }
+			// 	// start_userArray_lat.push(window.startingPointLatitude);
+			// 	// start_userArray_log.push(window.startingPointLongitude);
+			// 	// localStorage.setItem('start_users_lat', JSON.stringify(start_userArray_lat));
+			// 	// localStorage.setItem('start_users_log', JSON.stringify(start_userArray_log));
+			// });
+
+			// var requestUrl_2 = apiUrl + "commonapi/search?searchVal=" + location_2 + "&returnGeom=Y&getAddrDetails=Y&pageNum=1";
+			// $.get(requestUrl_2, function (data) {
+			// 	console.log(data);
+			// 	// 提取LATITUDE和LONGITUDE信息
+			// 	window.destinationLatitude = data.results[0].LATITUDE;
+			// 	window.destinationLongitude = data.results[0].LONGITUDE;
+
+			// 	// var resultText = "Latitude: " + latitude + "<br>Longitude: " + longitude;
+			// 	// $("#result").html(resultText);
+
+			// 	for (var i = 0; i < data.results.length; i++) {
+			// 		end_longitudeArray.push(data.results[i].LONGITUDE);
+			// 	}
+			// 	for (var i = 0; i < data.results.length; i++) {
+			// 		end_latitudeArray.push(data.results[i].LATITUDE);
+			// 	}
+
+			// 	// if (end_userArray_lat.length >= MAX_USER) {
+			// 	// 	end_userArray_lat.shift();
+			// 	// }
+			// 	// if (end_userArray_log.length >= MAX_USER) {
+			// 	// 	end_userArray_log.shift();
+			// 	// }
+			// 	// end_userArray_lat.push(window.destinationLatitude);
+			// 	// end_userArray_log.push(window.destinationLongitude);
+			// 	// localStorage.setItem('end_users_lat', JSON.stringify(end_userArray_lat));
+			// 	// localStorage.setItem('end_users_log', JSON.stringify(end_userArray_log));
+			// });
+
+			if (window.destinationLatitude === null || window.destinationLongitude === null
+				|| window.startingPointLatitude === null || window.startingPointLongitude === null)
+				return;
+
+			const historyContainer = document.getElementById('history-records');
+			let isExist = false;
+			for (let i = 0; i < 5; i++) {
+				if (start_userArray_lat[i] === window.startingPointLatitude
+					&& start_userArray_log[i] === window.startingPointLongitude
+					&& end_userArray_lat[i] === window.destinationLatitude
+					&& end_userArray_log[i] === window.destinationLongitude
+					&& RouteType_userArray[i] === RouteType) {
+					accessTimes_userArray[i]++;
+					isExist = true;
+					break;
 				}
-				// 储存LONGITUDE信息到数组
-				for (var i = 0; i < data.results.length; i++) {
-					start_longitudeArray.push(data.results[i].LONGITUDE);
+			}
+			if (!isExist) {
+				if (numOptions < 5) {
+					let i = numOptions;
+					start_userArray_lat[i] = window.startingPointLatitude;
+					start_userArray_log[i] = window.startingPointLongitude;
+					end_userArray_lat[i] = window.destinationLatitude;
+					end_userArray_log[i] = window.destinationLongitude;
+					RouteType_userArray[i] = RouteType;
+					accessTimes_userArray[i] = 1;
+					localStorage.setItem('start_users_lat', JSON.stringify(start_userArray_lat));
+					localStorage.setItem('start_users_log', JSON.stringify(start_userArray_log));
+					localStorage.setItem('end_users_lat', JSON.stringify(end_userArray_lat));
+					localStorage.setItem('end_users_log', JSON.stringify(end_userArray_log));
+					localStorage.setItem('RouteType_users', JSON.stringify(RouteType_userArray));
+					localStorage.setItem('accessTimes_users', JSON.stringify(accessTimes_userArray));
+					const option = document.createElement('button');
+					const textNode1 = document.createTextNode("FROM: " + startingPoint);
+					const textNode2 = document.createTextNode("TO: " + destination);
+					const newlineNode = document.createElement("br");
+					option.appendChild(textNode1);
+					option.appendChild(newlineNode);
+					option.appendChild(textNode2);
+					// option.textContent = `option${numOptions}`;
+					option.classList.add('records-text');
+					option.classList.add('records-option');
+					option.setAttribute("id", `option${i}`);
+					historyContainer.appendChild(option);
+					option.style.display = 'none';
+					option.addEventListener("click", showHistory.bind(null, numOptions));
+					numOptions++;
+				} else {
+					if (!isExist) {
+						let minAccessTimes = 0;
+						for (let i = 1; i < 5; i++) {
+							if (accessTimes_userArray[minAccessTimes] > accessTimes_userArray[i]) {
+								minAccessTimes = i;
+							}
+						}
+						start_userArray_lat[i] = window.startingPointLatitude;
+						start_userArray_log[i] = window.startingPointLongitude;
+						end_userArray_lat[i] = window.destinationLatitude;
+						end_userArray_log[i] = window.destinationLongitude;
+						RouteType_userArray[i] = RouteType;
+						accessTimes_userArray[i] = 1;
+						localStorage.setItem('start_users_lat', JSON.stringify(start_userArray_lat));
+						localStorage.setItem('start_users_log', JSON.stringify(start_userArray_log));
+						localStorage.setItem('end_users_lat', JSON.stringify(end_userArray_lat));
+						localStorage.setItem('end_users_log', JSON.stringify(end_userArray_log));
+						localStorage.setItem('RouteType_users', JSON.stringify(RouteType_userArray));
+						localStorage.setItem('accessTimes_users', JSON.stringify(accessTimes_userArray));
+					}
 				}
-
-				// 提取LATITUDE和LONGITUDE信息
-				window.startingPointLatitude = data.results[0].LATITUDE;
-				window.startingPointLongitude = data.results[0].LONGITUDE;
-
-				// var resultText = "Latitude: " + latitude + "<br>Longitude: " + longitude;
-				// $("#result").html(resultText);
-
-			});
-
-			var requestUrl_2 = apiUrl + "commonapi/search?searchVal=" + location_2 + "&returnGeom=Y&getAddrDetails=Y&pageNum=1";
-			$.get(requestUrl_2, function (data) {
-				console.log(data);
-				// 提取LATITUDE和LONGITUDE信息
-				window.destinationLatitude = data.results[0].LATITUDE;
-				window.destinationLongitude = data.results[0].LONGITUDE;
-
-				// var resultText = "Latitude: " + latitude + "<br>Longitude: " + longitude;
-				// $("#result").html(resultText);
-
-				for (var i = 0; i < data.results.length; i++) {
-					end_longitudeArray.push(data.results[i].LONGITUDE);
-				}
-				for (var i = 0; i < data.results.length; i++) {
-					end_latitudeArray.push(data.results[i].LATITUDE);
-				}
-
-			});
-
-			// window.startingPointLatitude = parseFloat(startingPointCoords[0]);
-			// window.startingPointLongitude = parseFloat(startingPointCoords[1]);
-			// window.destinationLatitude = parseFloat(destinationCoords[0]);
-			// window.destinationLongitude = parseFloat(destinationCoords[1]);
-
+			}
+			//  historyContainer.style.display = 'none';
 			console.log('Starting Point Latitude:', window.startingPointLatitude);
 			console.log('Starting Point Longitude:', window.startingPointLongitude);
 			console.log('Destination Latitude:', window.destinationLatitude);
 			console.log('Destination Longitude:', window.destinationLongitude);
 
-
-			Routing();
+			Routing(window.startingPointLatitude, window.startingPointLongitude, window.destinationLatitude, window.destinationLongitude, RouteType);
 		}
 		// var startlat = '1.30000';
 		// var startlng = '103.84223';
@@ -492,12 +609,95 @@
 		// 1.30000,103.84223
 		// 1.31801,103.84224
 
-		function Routing() {
+		function showHistory(id) {
+			const start_userArray_lat = JSON.parse(localStorage.getItem('start_users_lat')) || [];
+			const start_userArray_log = JSON.parse(localStorage.getItem('start_users_log')) || [];
+			const end_userArray_lat = JSON.parse(localStorage.getItem('end_users_lat')) || [];
+			const end_userArray_log = JSON.parse(localStorage.getItem('end_users_log')) || [];
+			const RouteType_userArray = (localStorage.getItem('RouteType_users')) || [];
 
-			var startlat = window.startingPointLatitude;
-			var startlng = window.startingPointLongitude;
-			var endlat = window.destinationLatitude;
-			var endlng = window.destinationLongitude;
+			// const showhistory = document.getElementById(`option${id}`);
+			// showhistory.innerHTML = '';
+
+			Routing(start_userArray_lat[id], start_userArray_log[id], end_userArray_lat[id], end_userArray_log[id], RouteType_userArray[id]);
+		}
+
+		// function showHistory_1() {
+		// 	// 抓控件
+		// 	const showhistory_1 = document.getElementById('记得改');
+		// 	showhistory_1.innerHTML = '';
+		// 	// 抓元素
+		// 	const start_userArray_lat = JSON.parse(localStorage.getItem('start_users_lat')) || [];
+		// 	const start_userArray_log = JSON.parse(localStorage.getItem('start_users_log')) || [];
+		// 	const end_userArray_lat = JSON.parse(localStorage.getItem('end_users_lat')) || [];
+		// 	const end_userArray_log = JSON.parse(localStorage.getItem('end_users_log')) || [];
+		// 	const RouteType_userArray = (localStorage.getItem('RouteType_users')) || [];
+
+		// 	Routing(start_userArray_lat[0], start_userArray_log[0], end_userArray_lat[0], end_userArray_log[0], RouteType_userArray[0]);
+		// }
+		// function showHistory_2() {
+		// 	// 抓控件
+		// 	const showhistory_2 = document.getElementById('记得改');
+		// 	showhistory_2.innerHTML = '';
+		// 	// 抓元素
+		// 	const start_userArray_lat = JSON.parse(localStorage.getItem('start_users_lat')) || [];
+		// 	const start_userArray_log = JSON.parse(localStorage.getItem('start_users_log')) || [];
+		// 	const end_userArray_lat = JSON.parse(localStorage.getItem('end_users_lat')) || [];
+		// 	const end_userArray_log = JSON.parse(localStorage.getItem('end_users_log')) || [];
+		// 	const RouteType_userArray = (localStorage.getItem('RouteType_users')) || [];
+
+		// 	Routing(start_userArray_lat[1], start_userArray_log[1], end_userArray_lat[1], end_userArray_log[1], RouteType_userArray[1]);
+
+		// }
+		// function showHistory_3() {
+		// 	// 抓控件
+		// 	const showhistory_3 = document.getElementById('记得改');
+		// 	showhistory_3.innerHTML = '';
+		// 	// 抓元素
+		// 	const start_userArray_lat = JSON.parse(localStorage.getItem('start_users_lat')) || [];
+		// 	const start_userArray_log = JSON.parse(localStorage.getItem('start_users_log')) || [];
+		// 	const end_userArray_lat = JSON.parse(localStorage.getItem('end_users_lat')) || [];
+		// 	const end_userArray_log = JSON.parse(localStorage.getItem('end_users_log')) || [];
+		// 	const RouteType_userArray = (localStorage.getItem('RouteType_users')) || [];
+
+		// 	Routing(start_userArray_lat[2], start_userArray_log[2], end_userArray_lat[2], end_userArray_log[2], RouteType_userArray[2]);
+
+		// }
+		// function showHistory_4() {
+		// 	// 抓控件
+		// 	const showhistory_4 = document.getElementById('记得改');
+		// 	showhistory_4.innerHTML = '';
+		// 	// 抓元素
+		// 	const start_userArray_lat = JSON.parse(localStorage.getItem('start_users_lat')) || [];
+		// 	const start_userArray_log = JSON.parse(localStorage.getItem('start_users_log')) || [];
+		// 	const end_userArray_lat = JSON.parse(localStorage.getItem('end_users_lat')) || [];
+		// 	const end_userArray_log = JSON.parse(localStorage.getItem('end_users_log')) || [];
+		// 	const RouteType_userArray = (localStorage.getItem('RouteType_users')) || [];
+
+		// 	Routing(start_userArray_lat[3], start_userArray_log[3], end_userArray_lat[3], end_userArray_log[3], RouteType_userArray[3]);
+
+		// }
+		// function showHistory_5() {
+		// 	// 抓控件
+		// 	const showhistory_5 = document.getElementById('记得改');
+		// 	showhistory_5.innerHTML = '';
+		// 	// 抓元素
+		// 	const start_userArray_lat = JSON.parse(localStorage.getItem('start_users_lat')) || [];
+		// 	const start_userArray_log = JSON.parse(localStorage.getItem('start_users_log')) || [];
+		// 	const end_userArray_lat = JSON.parse(localStorage.getItem('end_users_lat')) || [];
+		// 	const end_userArray_log = JSON.parse(localStorage.getItem('end_users_log')) || [];
+		// 	const RouteType_userArray = (localStorage.getItem('RouteType_users')) || [];
+
+		// 	Routing(start_userArray_lat[4], start_userArray_log[4], end_userArray_lat[4], end_userArray_log[4], RouteType_userArray[4]);
+
+		// }
+
+		function Routing(startlat, startlng, endlat, endlng) {
+
+			// var startlat = window.startingPointLatitude;
+			// var startlng = window.startingPointLongitude;
+			// var endlat = window.destinationLatitude;
+			// var endlng = window.destinationLongitude;
 
 			console.log(startlat);
 			console.log(endlat);
@@ -578,7 +778,7 @@
 				console.log(currentPolyline);
 				while (currentPolyline.length > 0) {
 					var num = currentPolyline.length;
-					Tempt_currentPolyline = urrentPolyline[num - 1];
+					Tempt_currentPolyline = currentPolyline[num - 1];
 					console.log(Tempt_currentPolyline);
 					map.removeLayer(Tempt_currentPolyline);
 					currentPolyline.pop();
@@ -696,7 +896,7 @@
 					else if (min_camera_end == -1 && min_camera_start > -1) {
 						if (camera_car_number[min_camera_start] <= 4) {
 							var polyline = L.polyline(arrayOfArrays, {
-								color: "green",
+								color: "#00ff00",
 								weight: 5,
 								smoothFactor: 1
 							});
@@ -809,7 +1009,7 @@
 			});
 			pointArray = [];
 		}
-	
+
 		let currentlocation_point = null;
 
 		function getCurrentLocation_map() {
@@ -831,7 +1031,7 @@
 			map.removeLayer(currentlocation_point_draw);
 			map.setView([1.3521, 103.8198], 13);
 		}
-	
+
 	</script>
 </body>
 
